--- a/03/index.html
+++ b/03/index.html
@@ -36,5 +36,6 @@
     </div>
 
     <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" />
+    <script type="text/javascript" src="01.js"></script>
   </body>
 </html>
